--- a/JavaFX9/src/sample/sample.fxml
+++ b/JavaFX9/src/sample/sample.fxml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="sample.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <children>
         <Button fx:id="btnParse" layoutX="108.0" layoutY="308.0" mnemonicParsing="false" text="Parse">
             <tooltip>
-                <Tooltip text="Tooltip from Parse"/>
+                <Tooltip text="Tooltip from Parse" />
             </tooltip>
         </Button>
         <Button fx:id="btnClear" layoutX="228.0" layoutY="308.0" mnemonicParsing="false" text="Clear">
             <tooltip>
-                <Tooltip text="Tooltip from Clear"/>
+                <Tooltip text="Tooltip from Clear" />
             </tooltip>
         </Button>
         <Label layoutX="101.0" layoutY="38.0" text="Please enter number">
             <font>
-                <Font size="22.0"/>
+                <Font size="22.0" />
             </font>
         </Label>
-        <TextArea fx:id="txtArea" layoutX="100.0" layoutY="159.0" prefHeight="127.0" prefWidth="200.0"/>
-        <TextField fx:id="txtNumField" layoutX="107.0" layoutY="85.0"/>
+        <TextArea fx:id="txtArea" layoutX="100.0" layoutY="159.0" prefHeight="127.0" prefWidth="200.0" />
+        <TextField fx:id="txtNumField" layoutX="107.0" layoutY="85.0" />
+      <Button fx:id="btnNext" layoutX="294.0" layoutY="308.0" mnemonicParsing="false" text="Next" />
     </children>
 </AnchorPane>
